Fix 2 things: more readable info about game, cannot move after game win

--- a/GameOverBoardGame/wwwroot/css/gameover.css
+++ b/GameOverBoardGame/wwwroot/css/gameover.css
@@ -18,8 +18,9 @@
     min-height: 122px;
 }
 
-.activePlayer {
-    background-color: lightgreen;
+.infoPanel {
+    float: left;
+    padding-left: 10px;
 }
 
 .chestfat {
